
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sock ;
typedef int WSADATA ;


 int AF_INET ;
 int MAKEWORD (int,int ) ;
 int SOCK_STREAM ;
 scalar_t__ WSAStartup (int ,int *) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int socket (int ,int ,int ) ;

int socket_connect(char *server, int port) {

 int fd;
 struct sockaddr_in sock;
 struct hostent *host;






 memset(&sock, 0, sizeof(sock));

 if((fd = socket(AF_INET, SOCK_STREAM, 0)) < 0) return -1;

 sock.sin_family = AF_INET;
 sock.sin_port = htons(port);

 if(!(host=gethostbyname(server))) return -1;

 sock.sin_addr = *((struct in_addr *)host->h_addr);

 if(connect(fd, (struct sockaddr *) &sock, sizeof(sock)) < 0) return -1;

 return fd;

}
